fixed overlap between calendar and side pane

--- a/app/assets/stylesheets/slots.scss
+++ b/app/assets/stylesheets/slots.scss
@@ -2,20 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .simple-calendar{
-    // width: 70% ;
-    font-size: 90%
+    font-size: 90%;
+    min-width: 450px;
 }
 
 .timeslice{
     border:1px solid black;
-    // width: 70%
+    font-size: 90%;
 }
 
 .parent{
     height: auto;
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr 1fr;
 }
 
 .card{
@@ -23,4 +23,8 @@
     flex-direction: column;
     padding: 1rem;
     justify-content: space-between;
+}
+
+.booking-window{
+    max-width: 90%;
 }
